tests/bad/bad65.tig
let
  var idx := 0
  type iarr = array of int
  var arr := iarr[10] of 42
in
  idx:=range ((idx:=idx+5; idx), (idx:=idx+5; idx));
  arr[idx] := 32
end
